0. Metadata
-----------
File version:	$Id$
Copyright:		Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
License:		GNU General Public License version 2 or later; see LICENSE.txt

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Sep-2009 Andrew Eddie
+ Added test for JComponentForm constructor.

25-Sep-2009
^ Move control panel functional tests to folder
^ Add article basic functional test

25-Sep-2009 Andrew Eddie
 ^ bootstrap.php can include optional config.php to set custom variables (such as JPATH_BASE).
 + Added example test.
 + Added tests for JActions and JAction.

24-Sep-2009 Andrew Eddie
 + Added 1.6 unittest scaffolding.
 
24-Sep-2009 Mark Dexter
 ^ Added basic functional tests to test admin menu choices