@@ -1,0 +1,18 @@
+<?php
+/**
+ * Joomla! v1.5 Unit Test Facility
+ *
+ * @package Joomla
+ * @subpackage UnitTest
+ * @copyright Copyright (C) 2005 - 2008 Open Source Matters, Inc.
+ * @version $Id: $
+ *
+ */
+
+/**
+ * Interface to JCache methods.  Used for testing of cache storage. 
+ */
+class JCacheRaw extends JCache
+{
+
+}
