@@ -1,0 +1,128 @@
+<?php
+/**
+ * Joomla! v1.5 Unit Test Facility
+ *
+ * @package Joomla
+ * @subpackage UnitTest
+ * @copyright Copyright (C) 2005 - 2008 Open Source Matters, Inc.
+ * @version $Id: $
+ *
+ */
+JLoader::register('JCacheStorage', JPATH_LIBRARIES.DS.'joomla'.DS.'cache'.DS.'storage.php');
+
+/**
+ * Mock of JCacheStorage Backend Class.  Used for testing of cache handlers. 
+ */
+class JCacheStorageMock extends JCacheStorage
+{
+	private $_storage = array();
+
+	/**
+	 * Constructor
+	 *
+	 * @access protected
+	 * @param array $options optional parameters
+	 */
+	function __construct( $options = array() )
+	{
+		parent::__construct($options);
+
+		$config			=& JFactory::getConfig();
+		$this->_hash	= $config->getValue('config.secret');
+	}
+
+	/**
+	 * Get cached data from y id and group
+	 *
+	 * @access	public
+	 * @param	string	$id			The cache data id
+	 * @param	string	$group		The cache data group
+	 * @param	boolean	$checkTime	True to verify cache time expiration threshold
+	 * @return	mixed	Boolean false on failure or a cached data string
+	 * @since	1.5
+	 */
+	function get($id, $group, $checkTime)
+	{
+		$cache_id = $this->_getCacheId($id, $group);
+		if(isset($this->_storage[$id])) {
+			return $this->_storage[$id];
+		}
+		return false;
+	}
+
+	/**
+	 * Store the data
+	 *
+	 * @access	public
+	 * @param	string	$id		The cache data id
+	 * @param	string	$group	The cache data group
+	 * @param	string	$data	The data to store in cache
+	 * @return	boolean	True on success, false otherwise
+	 * @since	1.5
+	 */
+	function store($id, $group, $data)
+	{
+		$cache_id = $this->_getCacheId($id, $group);
+		return ($this->_storage[$id] = $data);
+	}
+
+	/**
+	 * Remove a cached data entry by id and group
+	 *
+	 * @access	public
+	 * @param	string	$id		The cache data id
+	 * @param	string	$group	The cache data group
+	 * @return	boolean	True on success, false otherwise
+	 * @since	1.5
+	 */
+	function remove($id, $group)
+	{
+		$cache_id = $this->_getCacheId($id, $group);
+		unset($this->_storage[$id]);
+	}
+
+	/**
+	 * Clean cache for a group given a mode.
+	 *
+	 * group mode		: cleans all cache in the group
+	 * notgroup mode	: cleans all cache not in the group
+	 *
+	 * @access	public
+	 * @param	string	$group	The cache data group
+	 * @param	string	$mode	The mode for cleaning cache [group|notgroup]
+	 * @return	boolean	True on success, false otherwise
+	 * @since	1.5
+	 */
+	function clean($group, $mode)
+	{
+		return ($this->_storage = array());
+	}
+
+	/**
+	 * Test to see if the cache storage is available.
+	 *
+	 * @static
+	 * @access public
+	 * @return boolean  True on success, false otherwise.
+	 */
+	function test()
+	{
+		return true;
+	}
+
+	/**
+	 * Get a cache_id string from an id/group pair
+	 *
+	 * @access	private
+	 * @param	string	$id		The cache data id
+	 * @param	string	$group	The cache data group
+	 * @return	string	The cache_id string
+	 * @since	1.5
+	 */
+	function _getCacheId($id, $group)
+	{
+		$name	= md5($this->_application.'-'.$id.'-'.$this->_hash.'-'.$this->_language);
+		return 'cache_'.$group.'-'.$name;
+	}
+	
+}
